log
Sun 16 Oct 2022 11:39:26 PM UTC: 
 tests:  0|4
total_score: 0/70
f42863c
Sun 16 Oct 2022 11:43:44 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:8: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArray’; did you mean ‘heapArray’?
   40 |   aux->HeapArray = (heapElem*)malloc(3*sizeof(heapElem));
      |        ^~~~~~~~~
      |        heapArray
Compilation failed
be31920
Sun 16 Oct 2022 11:44:28 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:8: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘HeapArray’; did you mean ‘heapArray’?
   40 |   aux->HeapArray = (heapElem*)malloc(3*sizeof(heapArray));
      |        ^~~~~~~~~
      |        heapArray
heap.c:40:47: error: ‘heapArray’ undeclared (first use in this function)
   40 |   aux->HeapArray = (heapElem*)malloc(3*sizeof(heapArray));
      |                                               ^~~~~~~~~
heap.c:40:47: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
77599c9
Sun 16 Oct 2022 11:45:29 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c3f4574
Sun 16 Oct 2022 11:47:49 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
f06c3e8
Mon 17 Oct 2022 12:00:22 AM UTC: 
 heap.c | 28 ++++++++++++++++++++++------
 1 file changed, 22 insertions(+), 6 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:29:6: error: ‘pa’ undeclared (first use in this function); did you mean ‘pq’?
   29 |   if(pa->size+1 > pa->capac){
      |      ^~
      |      pq
heap.c:29:6: note: each undeclared identifier is reported only once for each function it appears in
heap.c:40:42: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘heaArray’; did you mean ‘heapArray’?
   40 |     if(pq->heapArray[min].priority > pq->heaArray[max].priority){
      |                                          ^~~~~~~~
      |                                          heapArray
Compilation failed
23f5ee4
Mon 17 Oct 2022 12:00:33 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:29:6: error: ‘pa’ undeclared (first use in this function); did you mean ‘pq’?
   29 |   if(pa->size+1 > pq->capac){
      |      ^~
      |      pq
heap.c:29:6: note: each undeclared identifier is reported only once for each function it appears in
heap.c:40:42: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘heaArray’; did you mean ‘heapArray’?
   40 |     if(pq->heapArray[min].priority > pq->heaArray[max].priority){
      |                                          ^~~~~~~~
      |                                          heapArray
Compilation failed
6349dfe
Mon 17 Oct 2022 12:01:04 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:29:6: error: ‘pa’ undeclared (first use in this function); did you mean ‘pq’?
   29 |   if(pa->size+1 > pq->capac){
      |      ^~
      |      pq
heap.c:29:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fd5496c
Mon 17 Oct 2022 12:01:14 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:43:7: error: ‘pa’ undeclared (first use in this function); did you mean ‘pq’?
   43 |       pa->heapArray[min] = *elemAux;
      |       ^~
      |       pq
heap.c:43:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b8c8843
Mon 17 Oct 2022 12:02:21 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
9a96671
Mon 17 Oct 2022 02:51:56 AM UTC: 
 heap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:58:70: error: ‘prio’ undeclared (first use in this function)
   58 |   while(((current <= pq->size) && (pq->heapArray[current].priority > prio))||((current <= pq->size) && (pq->heapArray[current+1].priority > prio))){
      |                                                                      ^~~~
heap.c:58:70: note: each undeclared identifier is reported only once for each function it appears in
In file included from test.c:4:
heap.c:64:26: error: expected ‘;’ before ‘}’ token
   64 |     current = 2*current+1
      |                          ^
      |                          ;
   65 |   }
      |   ~                       
Compilation failed
d72c1a6
Mon 17 Oct 2022 02:52:11 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:58:70: error: ‘prio’ undeclared (first use in this function)
   58 |   while(((current <= pq->size) && (pq->heapArray[current].priority > prio))||((current <= pq->size) && (pq->heapArray[current+1].priority > prioridad))){
      |                                                                      ^~~~
heap.c:58:70: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
02794c2
Mon 17 Oct 2022 02:52:22 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 50/70
b357211
Mon 17 Oct 2022 02:52:37 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  7|1
total_score: 50/70
6e0be8a
Mon 17 Oct 2022 02:53:05 AM UTC: 
 heap.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 50/70
9a855bf
Mon 17 Oct 2022 02:53:59 AM UTC: 
 heap.c | 28 ++++++----------------------
 1 file changed, 6 insertions(+), 22 deletions(-)
 tests:  7|1
total_score: 45/70
ef77f35
Mon 17 Oct 2022 02:57:40 AM UTC: 
 heap.c | 19 +++++++++++++------
 1 file changed, 13 insertions(+), 6 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:59:113: error: ‘heapArray’ undeclared (first use in this function)
   59 |   while(((current <= pq->size) && (pq->heapArray[current].priority > prioridad))||((current <= pq->size) && (pq>heapArray[current+1].priority > prioridad))){
      |                                                                                                                 ^~~~~~~~~
heap.c:59:113: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
bb3f7da
Mon 17 Oct 2022 02:58:06 AM UTC: 
 heap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 50/70
683a7f0
Mon 17 Oct 2022 02:58:47 AM UTC: 
 heap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  7|1
total_score: 50/70
f5b593e
Mon 17 Oct 2022 02:58:55 AM UTC: 
 heap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  7|1
total_score: 50/70
4c77747
